# photo-search

./: .gitignore  README.md
Containers/OpenStreetMap/: Dockerfile  build-multiarch.sh
doc/: slide.md  slide.pptx
doc/aspire/: slide.md
doc/diagrams/: local-development.drawio
doc/web-components/: slide.md
scratchpad/: readme.md
src/: PhotoSearch.sln
src/PhotoSearch.API/: Constants.cs  Dockerfile  ModelConfiguration.cs  PhotoSearch.API.csproj  PhotoSearch.API.http  Program.cs  appsettings.json  http-client.env.json
src/PhotoSearch.AppHost/: AppHostExtensions.cs  Constants.cs  CustomPostgresConnectionStringRedirection.cs  PhotoSearch.AppHost.csproj  Program.cs  SShUtility.cs  StartupHelper.cs  appsettings.json
src/PhotoSearch.Common/: IPhotoImporter.cs  IReverseGeocoder.cs  MetadataHelper.cs  NominatimReverseGeocoder.cs  NominatimStatusResponse.cs  PhotoImporter.cs  PhotoSearch.Common.csproj
src/PhotoSearch.Data/: PhotoSearch.Data.csproj  PhotoSearchContext.cs  PhotoSearchContextFactory.cs
src/PhotoSearch.Florence2.API/: README.md
src/PhotoSearch.Florence2.API/src/: Dockerfile  Florence2Service.py  README.md  main copy.py  main.py  pyproject.toml  requirements.txt
src/PhotoSearch.LlamaCpp/: requirements.txt  run.py
src/PhotoSearch.MapTileServer/: MapTileServerHealthCheck.cs  MapTileServerResource.cs  MapTileServerResourceExtensions.cs  MapTileServerResourceLifecycleHook.cs  PhotoSearch.MapTileServer.csproj
src/PhotoSearch.Nominatim/: NominatimHealthCheck.cs  NominatimResource.cs  NominatimResourceBuilderExtensions.cs  PhotoSearch.Nominatim.csproj  (+1 more)
(+118 files in other folders)
